syntax = "proto3";

message LogMessage {
  string message = 1;
  string level = 2;
}


service LogService {
  rpc SendLog(LogMessage) returns (LogMessage);
}